kustomize/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 2048-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: 2048-app
    spec:
      containers:
      - name: 2048-app
        # Replace with your docker registry info
        image: registry.hub.docker.com/vtimofei/hello-app:1.0.0
        ports:
        - name: http
          containerPort: 8000
        resources:
          limits:
            cpu: "0.1"
            memory: 100Mi
